:sparkles: Add read-only pill to the workspace

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -5007,3 +5007,7 @@ msgstr "Update"
 
 msgid "workspace.viewport.click-to-close-path"
 msgstr "Click to close the path"
+
+#, markdown
+msgid "workspace.top-bar.read-only"
+msgstr "**Inspect mode** (View Only)"
