--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -881,7 +881,7 @@ msgstr "The email «%s» has been reported as spam or permanently bounce."
 msgid "errors.feature-mismatch"
 msgstr ""
 "Looks like you are opening a file that has the feature '%s' enabled but "
-"your penpot frontend does not supports it or has it disabled."
+"the current penpot version does not supports it or has it disabled."
 
 #: src/app/main/errors.cljs
 msgid "errors.file-feature-mismatch"
