--- a/frontend/src/app/main/ui/components/buttons/simple_button.mdx
+++ b/frontend/src/app/main/ui/components/buttons/simple_button.mdx
@@ -7,7 +7,7 @@ import * as SimpleButtonStories from "./simple_button.stories"
 
 This is an example of **markdown** docs within storybook, for the component `<SimpleButton>`.
 
-Here's how we can render a simple button:
+Here's how we can render a default simple button:
 
 <Canvas of={SimpleButtonStories.Default} />
 
