:sparkles: Rename grid to guides

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -5046,3 +5046,6 @@ msgstr "Gradient"
 
 msgid "media.choose-image"
 msgstr "Choose image"
+
+msgid "workspace.options.guides.title"
+msgstr "Guides"
