--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -5070,6 +5070,9 @@ msgstr "Add 1 column to the right"
 msgid "workspace.context-menu.grid-track.column.delete"
 msgstr "Delete column"
 
+msgid "workspace.context-menu.grid-track.column.delete-shapes"
+msgstr "Delete column and shapes"
+
 msgid "workspace.context-menu.grid-track.row.duplicate"
 msgstr "Duplicate row"
 
@@ -5081,6 +5084,9 @@ msgstr "Add 1 row bellow"
 
 msgid "workspace.context-menu.grid-track.row.delete"
 msgstr "Delete row"
+
+msgid "workspace.context-menu.grid-track.row.delete-shapes"
+msgstr "Delete row and shapes"
 
 msgid "workspace.context-menu.grid-cells.merge"
 msgstr "Merge cells"
