--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -5159,6 +5159,9 @@ msgstr "Añadir 1 columna a la derecha"
 msgid "workspace.context-menu.grid-track.column.delete"
 msgstr "Borrar columna"
 
+msgid "workspace.context-menu.grid-track.column.delete-shapes"
+msgstr "Borrar columna con el contenido"
+
 msgid "workspace.context-menu.grid-track.row.duplicate"
 msgstr "Duplicar fila"
 
@@ -5170,6 +5173,9 @@ msgstr "Añadir 1 fila debajo"
 
 msgid "workspace.context-menu.grid-track.row.delete"
 msgstr "Borrar fila"
+
+msgid "workspace.context-menu.grid-track.row.delete-shapes"
+msgstr "Borrar fila con el contenido"
 
 msgid "workspace.context-menu.grid-cells.merge"
 msgstr "Fusionar celdas"
